[gd_scene load_steps=4 format=3 uid="uid://c6hijlinaypil"]

[ext_resource type="Texture2D" uid="uid://8xx84n1iwa8p" path="res://icon.svg" id="1_dfo3b"]
[ext_resource type="Script" uid="uid://dk5c87ouo35e" path="res://Scenes/Towers/Projectiles/base_projectile.gd" id="1_gd7mj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gd7mj"]

[node name="BaseProjectile" type="Area2D"]
z_index = 3
collision_layer = 0
collision_mask = 2
script = ExtResource("1_gd7mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gd7mj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dfo3b")

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SpawnPaintBlobTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="SpawnPaintBlobTimer" to="." method="_on_spawn_paint_blob_timer_timeout"]
